--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,4 +30,23 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  
+}
+
+.mb-0 {
+  margin-top: 12px;
+}
+
+aside {
+  background-color: #cececed1 !important;
+  padding: 20px;
+}
+
+.ant-menu {
+  background-color: transparent !important;
+  border-inline-end: none !important;
+}
+
+.ant-menu-item {
+  background-color: #fff !important;
 }
