implement order api

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,11 @@ aside {
 .ql-clean {
   display: none !important;
 }
+
+.clickable {
+  cursor: pointer;
+}
+
+.clickable:hover {
+  opacity: 0.8;
+}
