--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: #1d1d1d;
   /* background:  linear-gradient(to right, #ece6ff , #ffeded);; */
   user-select: none;
 }
@@ -92,4 +92,25 @@ aside {
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0);
   color: white;
+}
+
+.outer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.inner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  padding-left: 30px;
+  padding-right: 1rem;
+}
+
+.top-nav-buttons {
+  border: none;
+  height: 60px;
+  padding: 0px 30px;
 }
