--- a/src/components/HomeTabsProducts/styles.css
+++ b/src/components/HomeTabsProducts/styles.css
@@ -50,9 +50,15 @@
     border-radius: 4px;
 }
 
+.prods-columns {
+    width: 50%;
+}
+
 @media screen and (max-width: 484px) {
     .control-display {
         display: none;
     }
-
+    .prods-columns {
+        width: 100%;
+    }
 }
