--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,3 +114,12 @@ aside {
   height: 60px;
   padding: 0px 30px;
 }
+
+.scrollbar-none {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
