--- a/src/app/user-profile/components/styles.css
+++ b/src/app/user-profile/components/styles.css
@@ -12,38 +12,54 @@
   height: 150px;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.grid-item {
+  height: auto;
+}
+
 @media screen and (max-width: 1200px) {
   .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
+
   .product-card-width-fav {
     width: calc(100vw / 4.7);
   }
 }
+
 @media screen and (max-width: 900px) {
   .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
+
   .product-card-width-fav {
     width: calc(100vw / 3.6);
   }
 }
+
 @media screen and (max-width: 600px) {
   .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+
   .product-card-width-fav {
     width: calc(100vw / 2.4);
   }
 }
+
 @media screen and (max-width: 375px) {
   .container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
+
   .product-card-width-fav {
     width: 90vw;
   }
